--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,6 @@ tokio = { version = "1.41.1", features = ["full"] }
 log = "0.4.22"
 env_logger = "0.11.5"
 clap-verbosity-flag = "2.2.2"
+
+[profile.release]
+lto = true
